crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__spacing__explicit-newline-outside-env_display.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..6
  run "a" @0..1
  break @2..4
  run "b" @5..6
-- problems --
