crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__spacing__multiple-spaces-collapse.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..11
  run "a" @0..1
  run "+" @5..6
  run "b" @10..11
-- problems --
