crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__spacing__space-inside-group.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..5
  row @0..5
    run "a" @2..3
-- problems --
